<resources>
    <string name="app_name">Bizzcons</string>
    <string name="bizzcons">Bizzcons</string>
    <string name="dreaming_realities">Dreaming Realities</string>

    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="enter_your_email">Email Address</string>
    <string name="enter_your_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="your_name">Name</string>
    <string name="enter_your_phone_number">Phone</string>
    <string name="enter_your_address">Address</string>
    <string name="select_your_date_of_birth">Date of Birth</string>
    <string name="select_profile_pic">Profile Picture</string>
    <string name="sign_up">Sign Up</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="write_address">Type Address</string>
    <string name="upload_with_camera">Upload with camera</string>
    <string name="upload_from_gallery">Upload from gallery</string>
    <string name="basic_information">Basic Information</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="new_here">New here? Sign Up</string>
    <string name="need_permissions">Permissions Request</string>
    <string name="permission_message">Bizzcons need some permissions to work fine which are</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="cancel">Cancel</string>
    <string name="permission_message_acceptance">You need to accept permissions to use this app</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="write_here">Write here</string>
    <string name="update_address">Update Address</string>
    <string name="search_projects">Search Projects</string>
    <string name="recent_projects">Recent Projects</string>
    <string name="our_blogs">Our Blogs</string>
    <string name="login">Login</string>
    <string name="open_nav">Open Nav</string>
    <string name="close_nav">Close Nav</string>
    <string name="home">Home</string>
    <string name="blogs">Blogs</string>
    <string name="projects">Projects</string>
    <string name="more">More</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="use_offline_mode">Your data will be synced shortly.To use offline mode please continue</string>

    <string name="design_consultancy">Design Consultancy</string>
    <string name="interior_design_deco">Interior Design and Decoration</string>
    <string name="gray_structure">Gray Structure Construction</string>
    <string name="turnkey_solution">Turnkey Home Solution</string>
    <string name="house_renovation">House Renovation</string>
    <string name="real_estate">Real Estate Service</string>

    <string name="design_consultancy_desc">We are honored to have experienced and skilled team providing a full range of Pre-Construction Design and Consultancy Services. We believe in improving and Optimizing Customer requirement and expectation by providing tailored and unique solutions resulting in significant reduction in cost and time to the Customer. All designs shall be dedicated and meeting the requirement of Customer.Our aptitude allows us the freedom to provide diverse architectural solutions, to leverage state-of-the-art products and materials including customer’s visions to improve each project. All Customer requirements shall be translated into practical, aesthetically pleasing and sustainable solutions.</string>
    <string name="interior_desc">Beautiful homes, snazzy office layouts, and breath-taking retail spaces are the result of knowledgeable and creative minds employing skilled workmen and high-grade material to create mini masterpieces in residential, corporate, and commercial spaces. Our talented team can transform any property into a beautiful space through architectural and interior design.We have partnered PEC Certified experts that are able to design Mechanical, Electrical, Plumbing and Structural drawings as per Customer requirement and satisfaction. This includes technical verification, design evaluations and coordinate project engineering design including Engineering Analysis to include preliminary design, design report, calculations, and material selection.</string>

    <string name="gray_structure_desc">Apart from Turnkey Solution to our valued Customers, we can construct quality Gray Structure worthy of approval from Authorities. We have our Quality Assurance and Control Team that will be available throughout the work duration to ensure all material and service shall be compliant to the specifications provided and agreed with the Customer.This includes but not limited to:

</string>
    <string-array name="gray_structure_points">
        <item>Foundation</item>
        <item>Walls</item>
        <item>Roof</item>
        <item>Plaster (Internal and External)</item>
        <item>Under-ground water tank</item>
        <item>Roof Water Tank</item>
        <item>Sewerage System</item>
        <item>Conduit for Electrical Connections</item>
    </string-array>

    <string name="turnkey_desc">We are committed to provide complete turnkey solution to our customers in terms of Home Construction. We offer fully designed, well-constructed and equipped facility to our Customers that will drastically simplifies things for our valued Customers. The basic advantage to our Customer is the shifting of complete Responsibility to Bizzcons and then ‘turn the key’ for the finished product.We have the expertise, experience and skill to perform outclass and our matchless services have helped us to deliver efficiently, effectively maintaining high standard throughout our development process. We can provide one-window solution to our Customers that will save them from hassle, construction stress and even from relevant paperwork.We are delivering High-Quality Solutions which is an essential essence of our business. Bizzcons team of qualified architects and engineers will ensure high quality service reaches you at every stage.Our Design and Specifications are unique, innovative and competitive. We utilize latest materials technologies and identify real opportunities to add greater value to your construction site. We offer competitive pricing and will safeguard Customer’s budget in every respect.</string>
    <string name="renovation_desc">We are operating with the objective to expertly resolve all renovation requirements of Customers. We have hands-on experience in remodeling offices, homes and buildings. We are a team that can uplift the ambiance of your property, and give refreshing and revitalized outlook of your home or office space.We assist you with the following services:</string>
    <string-array name="renovation_services">

        <item>Free estimation of scope of work with tentative timeline</item>
        <item>Suitable material selection and availability.</item>
        <item>Execution of project by deploying dedicated professionals.</item>
    </string-array>
    <string-array name="renovation_exprtise">
        <item>Flooring (Tiles / Marble/Laminate)</item>
        <item>Kitchen</item>
        <item>Roof Water Proofing</item>
        <item>Washroom</item>
        <item>Home Interior</item>
    </string-array>

    <string name="real_estate_desc">We help our Customers to purchase, rent, or sell properties. We can counsel on current market conditions, conduct walkthroughs, and provide guidance and assistance through the process of buying, selling, or renting properties.</string>
    <string name="see_all">See All</string>
    <string name="we_help_you_to_construct_a_better_place">We help you to construct a better place</string>
    <string name="all_blogs">All Blogs</string>
    <string name="all_projects">All Projects</string>
    <string name="logging_out">Logging Out</string>
    <string name="unable_to_fetch_address">Unable to fetch address.Please add manually for now</string>
    <string name="manually_add_address">Please manually add address</string>
    <string name="address_error">Please add address details</string>
    <string name="profile_error">Please add profile picture</string>
    <string name="posts">Posts</string>
    <string name="photos">Photos</string>
    <string name="android_2021">Android-2021</string>
    <string name="objective">Objective</string>

    <string name="username">Hi %s</string>

</resources>