<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/currentLocation"
            style="@style/app_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="@dimen/unit_2x"
            android:padding="@dimen/unit_2x"
            android:text="@string/use_current_location"
            android:drawableStart="@drawable/ic_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/writeAddress"
            style="@style/app_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="@dimen/unit_2x"
            android:padding="@dimen/unit_2x"
            android:text="@string/write_address"
            app:drawableStartCompat="@drawable/ic_write"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentLocation" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressWrapper"
            style="@style/edit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit_2x"
            android:layout_marginTop="@dimen/unit_2x"
            android:layout_marginEnd="@dimen/unit_2x"
            android:layout_marginBottom="@dimen/unit_3x"
            android:hint="@string/write_here"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/writeAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/updateAddressButton"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/unit_2x"
            android:layout_marginTop="@dimen/unit_2x"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/unit_2x"
            android:layout_marginBottom="@dimen/unit_3x"
            android:text="@string/update_address"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressWrapper" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>