<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.sarah.objectives.features.register.viewmodel.UserViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_2x"
                android:layout_marginTop="@dimen/unit_3x"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/welcomeText"
                style="@style/app_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_2x"
                android:layout_marginTop="@dimen/unit_3x"
                android:text="@string/register"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@id/backArrow"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/basicInfoHeader"
                style="@style/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/unit_4x"
                android:text="@string/basic_information"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcomeText" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullnameWrapper"
                style="@style/edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_2x"
                android:layout_marginTop="@dimen/unit_4x"
                android:layout_marginEnd="@dimen/unit_2x"
                android:hint="@string/your_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/basicInfoHeader">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullnameET"
                    style="@style/app_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_name"
                    android:drawablePadding="@dimen/unit_1x"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailWrapper"
                style="@style/edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_2x"
                android:layout_marginTop="@dimen/unit_4x"
                android:layout_marginEnd="@dimen/unit_2x"
                android:hint="@string/enter_your_email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fullnameWrapper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    style="@style/app_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/unit_1x"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordWrapper"
                style="@style/edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_2x"
                android:layout_marginTop="@dimen/unit_4x"
                android:layout_marginEnd="@dimen/unit_2x"
                android:hint="@string/enter_your_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailWrapper"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    style="@style/app_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/unit_1x"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneWrapper"
                style="@style/edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_2x"
                android:layout_marginTop="@dimen/unit_4x"
                android:layout_marginEnd="@dimen/unit_2x"
                android:hint="@string/enter_your_phone_number"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordWrapper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneET"
                    style="@style/app_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawablePadding="@dimen/unit_1x"
                    android:imeOptions="actionNext"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressWrapper"
                style="@style/edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_2x"
                android:layout_marginTop="@dimen/unit_4x"
                android:layout_marginEnd="@dimen/unit_2x"
                android:hint="@string/enter_your_address"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phoneWrapper">

                <!--
                                <AutoCompleteTextView
                                    android:id="@+id/addressWrapper"
                                    style="@style/edit_layout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/unit_2x"
                                    android:layout_marginTop="@dimen/unit_4x"
                                    android:layout_marginEnd="@dimen/unit_2x"
                                    android:clickable="false"
                                    android:cursorVisible="false"
                                    android:drawableStart="@drawable/ic_address"
                                    android:drawablePadding="@dimen/unit_1x"
                                    android:ellipsize="end"
                                    android:focusable="false"
                                    android:background="@drawable/rectangle_background"
                                    android:hint="@string/enter_your_address"
                                    android:inputType="text"
                                    android:padding="@dimen/unit_2x"
                                    android:text="@={viewModel.registerAddress}"
                                    app:error="@{ viewModel.registerAddressError}"
                                    app:layout_constraintLeft_toLeftOf="parent"
                                    app:layout_constraintRight_toRightOf="parent"
                                    app:layout_constraintTop_toBottomOf="@id/phoneWrapper" />-->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressET"
                    style="@style/app_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableStart="@drawable/ic_address"
                    android:drawablePadding="@dimen/unit_1x"
                    android:ellipsize="end"
                    android:focusable="false"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dobWrapper"
                style="@style/edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_2x"
                android:layout_marginTop="@dimen/unit_4x"
                android:layout_marginEnd="@dimen/unit_2x"
                android:hint="@string/select_your_date_of_birth"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/addressWrapper">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dobET"
                    style="@style/app_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:drawableStart="@drawable/ic_dob"
                    android:drawablePadding="@dimen/unit_1x"
                    android:focusable="false"
                    android:imeOptions="actionNext" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/profileHeader"
                style="@style/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/unit_4x"
                android:text="@string/profile_picture"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dobWrapper" />

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/profileLayoutDimens"
                android:layout_height="@dimen/profileLayoutDimens"
                android:layout_margin="@dimen/unit_2x"
                android:src="@drawable/ic_profile"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileHeader" />

            <Button
                android:id="@+id/registerButton"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_3x"
                android:layout_marginTop="@dimen/unit_4x"
                android:layout_marginEnd="@dimen/unit_3x"
                android:layout_marginBottom="@dimen/unit_4x"
                android:text="@string/sign_up"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileImage" />


            <ProgressBar
                android:id="@+id/progressLoader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</layout>