<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/anim_height_300"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/permissions" />

            <TextView
                android:id="@+id/dialogTitle"
                style="@style/app_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_4x"
                android:layout_marginTop="@dimen/unit_3x"
                android:layout_marginEnd="@dimen/unit_4x"
                android:layout_marginBottom="@dimen/unit_2x"
                android:text="@string/need_permissions"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/animationView" />

            <TextView
                android:id="@+id/message"
                style="@style/app_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/unit_4x"
                android:paddingBottom="@dimen/unit_2x"
                android:text="@string/permission_message"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/permissionRecyclerView"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/unit_4x"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/message"/>

            <TextView
                android:id="@+id/grantAccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/unit_2x"
                android:paddingBottom="@dimen/unit_2x"
                android:text="@string/grant_permissions"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/font_18sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/permissionRecyclerView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>