<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sarah.objectives.features.register.viewmodel.UserViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/anim_height_300"
                android:layout_margin="@dimen/unit_4x"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/login" />

            <TextView
                android:id="@+id/welcomeText"
                style="@style/heading_texts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/unit_2x"
                android:text="Hi! \nHow are you today?"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/animationView" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailWrapper"
                style="@style/edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_2x"
                android:layout_marginTop="@dimen/unit_4x"
                android:layout_marginEnd="@dimen/unit_2x"
                android:hint="@string/enter_your_email"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcomeText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    style="@style/app_text"
                    android:layout_width="match_parent"
                    android:text="@={viewModel.email}"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/unit_1x"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress"
                    tools:text="you@example.com" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordWrapper"
                style="@style/edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_2x"
                android:layout_marginTop="@dimen/unit_4x"
                android:layout_marginEnd="@dimen/unit_2x"
                android:hint="@string/enter_your_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailWrapper"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    style="@style/app_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@={viewModel.password}"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/unit_1x"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    tools:text="you@example.com" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/unit_3x"
                android:layout_marginTop="@dimen/unit_4x"
                android:layout_marginEnd="@dimen/unit_3x"
                android:layout_marginBottom="@dimen/unit_2x"
                android:text="@string/sign_in"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/passwordWrapper" />

            <TextView
                android:id="@+id/registerTextView"
                style="@style/app_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/unit_2x"
                android:text="@string/new_here"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginButton" />


            <ProgressBar
                android:id="@+id/progressLoader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>